--- a/BEL/BEL.csproj
+++ b/BEL/BEL.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="Archivo.cs" />
     <Compile Include="DirectorioComponente.cs" />
+    <Compile Include="DirectorioComposite.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Usuario.cs" />
   </ItemGroup>
