--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -42,8 +42,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ArchivoDAL.cs" />
     <Compile Include="DAO.cs" />
+    <Compile Include="DirectorioCompositeDAL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UsuarioDAL.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\BEL\BEL.csproj">
+      <Project>{25214f1a-c9ec-48a8-a00a-5b14c24f9bd7}</Project>
+      <Name>BEL</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
