--- a/UIOS/UIOS.csproj
+++ b/UIOS/UIOS.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <ProjectReference Include="..\BEL\BEL.csproj" />
     <ProjectReference Include="..\BLL\BLL.csproj" />
+    <ProjectReference Include="..\Servicio\Servicio.csproj" />
   </ItemGroup>
 
 </Project>
